--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
     
     <body>
+        <form id="drinkForm">
+            
+        </form>
         <script src="bootstrap/js/jquery-3.2.1.js"></script>
         <script src="bootstrap/js/bootstrap.js"></script>
         <script src="js/angular.js"></script>
