--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <main class="container" ng-app="drinks">
             <div class="row" ng-controller="getIngredients">
                 <form id="drinkForm">
-                    <span style="display: inline-block; width: 10%" ng-repeat="ingredient in ingredients.drinks"><input type="checkbox">{{ingredient.strIngredient1}}</span>
+                    <span style="display: inline-block; width: 10%" ng-repeat="ingredient in ingredients.drinks | orderBy:'strIngredient1'"><input type="checkbox">{{ingredient.strIngredient1}}</span>
                 </form>
             </div>
         </main>
