--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
     
     <body>
         <main class="container" ng-app="drinks">
-            <div class="row" ng-controller="getIngredients">
-                <form id="drinkForm">
-                    <div class="row">
-                        <div class="col-sm-2" style="padding: .2em 0;" ng-repeat="ingredient in ingredients.drinks | orderBy:'strIngredient1'">
-                            <input type="checkbox">{{ingredient.strIngredient1}}
-                        </div>
-                    </div>
-                </form>
-            </div>
+            <get-ingredients></get-ingredients>
         </main>
         <script src="bootstrap/js/jquery-3.2.1.js"></script>
         <script src="bootstrap/js/bootstrap.js"></script>
