--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     
     <body>
-        <main class="container" ng-app="drinks">
+        <div class="container-fluid" ng-app="drinks">
             <get-ingredients></get-ingredients>
-        </main>
+        </div>
         <script src="bootstrap/js/jquery-3.2.1.js"></script>
         <script src="bootstrap/js/bootstrap.js"></script>
         <script src="js/angular.js"></script>
