--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     
     <body>
+        <div class="mainTitle text-center">What's in my bar?</div>
+        <div class="text-center explanation"><h3>Enter the ingredients you have in your bar, fridge, or cabinet below to find out what you can mix up!</h3></div>
         <div class="container-fluid" ng-app="drinks">
             <get-ingredients></get-ingredients>
         </div>
