--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>What's in my bar?</title>
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     
     <body>
